--- a/src/app/components/add-budget/add-budget.component.html
+++ b/src/app/components/add-budget/add-budget.component.html
@@ -31,8 +31,8 @@
     <input matInput formControlName="amount" />
   </mat-form-field>
   <button
-    color="accent"
-    [disabled]="!form.valid"
+    color="primary"
+
     mat-raised-button
     type="submit"
   >
