--- a/src/app/components/add-budget/add-budget.component.html
+++ b/src/app/components/add-budget/add-budget.component.html
@@ -23,7 +23,7 @@
 
   <mat-form-field>
     <mat-label>Month</mat-label>
-    <input matInput formControlName="month" type="month"/>
+    <input matInput formControlName="month"/>
   </mat-form-field>
 
   <mat-form-field>
@@ -32,7 +32,7 @@
   </mat-form-field>
   <mat-form-field>
     <mat-label>Actual Expense</mat-label>
-    <input matInput formControlName="amount" />
+    <input matInput formControlName="amount" type="number"/>
   </mat-form-field>
   <button
     color="accent"
